# kiot

./: .dockerignore  .flatpak-manifest.yaml  .gitignore  CHANGELOG.md  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  WhatsNew.txt  core.cpp  core.h  dbusproperty.cpp  dbusproperty.h  docker-compose.yaml  helper.sh  main.cpp  servicemanager.cpp  servicemanager.h  systray.cpp  systray.h
.github/workflows/: auto_release_flatpak.yml  auto_release_flatpak.yml.bak  auto_release_flatpak.yml.disabled  ci.yml  docker-build.yml
aur/: PKGBUILD  PKGBUILD_USERINSTALL
dbus/: org.freedesktop.DBus.Properties.xml  org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.xml
entities/: README.md  battery.cpp  battery.h  binarysensor.cpp  binarysensor.h  button.cpp  button.h  camera.cpp  camera.h  entities.h  entity.cpp  entity.h  event.cpp  event.h  lock.cpp  lock.h  mediaplayer.cpp  mediaplayer.h  notify.cpp  notify.h  number.cpp  number.h  select.cpp  select.h  sensor.cpp  sensor.h  switch.cpp  switch.h  text.cpp  text.h  textbox.cpp  textbox.h  update.cpp  update.h
flatpak/: CMakeLists.txt  README.md  generate-icons.sh  org.davidedmundson.kiot.desktop  org.davidedmundson.kiot.metainfo.xml
integrations/: CMakeLists.txt  README.md  accentcolour.cpp  active.cpp  activewindow.cpp  activewindow_kwin.js  audio.cpp  battery.cpp  bluetooth.cpp  camera.cpp  customsensors.cpp  dndstate.cpp  docker.cpp  gamelauncher.cpp  gamepad.cpp  integration_template.cpp  lockedstate.cpp  mpris.cpp  mpris.h  nightmode.cpp  notifications.cpp  scripts.cpp  shortcuts.cpp  suspend.cpp  systemd.cpp  updater_flatpak.cpp  volume.cpp
logging/: logger.cpp  logger.h  messagehandler.cpp  messagehandler.h
scripts/: README.md  dependencies.sh  flatpak.sh  native.sh
ui/: CMakeLists.txt  kcm_kiot.cpp  kcm_kiot.json  kiotsettings.kcfg
ui/ui/: main.qml
